tests/examples/bad/duplicate_method.lat
int main() {
    return 1;
}

class A {
    int f() {
        return 1;
    }
    int f() {
        return 2; 
    }
}